package designPatterns.adapter;

public class Main {
    public static void main(String[] args) {
//        PhonePe phonePe = new PhonePe
    }
}
