@startuml

title __ADAPTER's Class Diagram__\n

  namespace  {
    namespace esignPatterns.adapter {
      interface designPatterns.adapter.BankApiAdapter {
          {abstract} + changePin()
          {abstract} + checkBalance()
          {abstract} + doTransaction()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.adapter {
      class designPatterns.adapter.IciciBankApi {
          + IciciBankApi()
          + changePin()
          + checkBalance()
          + transferMoney()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.adapter {
      class designPatterns.adapter.IciciBankApiAdapter {
          + IciciBankApiAdapter()
          + changePin()
          + checkBalance()
          + doTransaction()
          - validateToken()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.adapter {
      class designPatterns.adapter.Main {
          + Main()
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.adapter {
      class designPatterns.adapter.PhonePe {
          + PhonePe()
          + checkBalance()
          + toString()
          + transferMoney()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.adapter {
      class designPatterns.adapter.User {
          - password : String
          - username : String
          + User()
          + getPassword()
          + getUsername()
          + setPassword()
          + setUsername()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.adapter {
      class designPatterns.adapter.YesBankApi {
          + YesBankApi()
          + changePin()
          + doTransaction()
          + getBalance()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.adapter {
      class designPatterns.adapter.YesBankApiAdapter {
          + YesBankApiAdapter()
          + changePin()
          + checkBalance()
          + doTransaction()
      }
    }
  }
  

  designPatterns.adapter.IciciBankApiAdapter .up.|> designPatterns.adapter.BankApiAdapter
  designPatterns.adapter.IciciBankApiAdapter o-- designPatterns.adapter.IciciBankApi : iciciBankApi
  designPatterns.adapter.PhonePe o-- designPatterns.adapter.BankApiAdapter : bankApiAdapter
  designPatterns.adapter.YesBankApiAdapter .up.|> designPatterns.adapter.BankApiAdapter
  designPatterns.adapter.YesBankApiAdapter o-- designPatterns.adapter.YesBankApi : yesBankApi


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
